recursion.lessons.recursion.koch.Crab.scala.error
Crab:2: error: Missing closing brace `}' assumed here
def crab(levels:Int, length:Double) {
^